--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -272,7 +272,8 @@ The `redo` command fails as there are no `undo` commands executed previously.
 
 Clears all entries from the address book. +
 Format: `clear`
-// tag::profileJump[]
+
+// tag::linkAllProfileAndInsurance[]
 === Tracing a person from insurance profile
 `since v1.3`
 
@@ -281,22 +282,21 @@ Directly switching to a person profile page by clicking on their name on insuran
 image::ProfileJump.PNG[width="380"]
 
 Person name will be highlighted upon hover to indicate it is a link
-// end::profileJump[]
-// tag::insurancePanel[]
+
 === Finding insurance from insurance panel list on the right
 `since v1.4`
 
 image::insurancepanel.PNG[width="380"]
 
 Specific insurance contract can be displayed directly by selecting them on this panel
-// end::insurancePanel[]
-// tag::insuranceListing[]
+
 === Tracing all insurance file the current person selected is involved in
 `since v1.4`
 
 image::linktoinsurance.PNG[width="380"]
 List of all related insurance contracts are now displayed on person profile page. These entries can be clicked on which will switch up the selected insurance page
-// end::insuranceListing[]
+// end::linkAllProfileAndInsurance[]
+
 // tag::pdfSaveLoad[]
 === Add/View contract pdf file
 `since v1.4`
@@ -305,6 +305,15 @@ The pdf file for contract can now be added by clicking on the entry which will b
 
 image::contractPdf.png[width="380"]
 // end::pdfSaveLoad[]
+
+// tag::tabSwitch[]
+=== Tab key will only switch between CommandBox and SearchBox
+`since v1.5`
+
+To facilitate the usage of LISA via keyboard only, tabs nagivation is restricted only to the two textfields for easy input.
+// end::tabSwitch[]
+
+
 === Printing the Address book : `print`
 `since v1.4`
 
