--- a/docs/team/wongzengfeng.adoc
+++ b/docs/team/wongzengfeng.adoc
@@ -4,9 +4,9 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :stylesDir: ../stylesheets
 
 == Project: AddressBook - Level 4
-AddressBook - Level 4 is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
+PEERSONAL is a desktop address book application. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
 
-*Code contributed*: [https://github.com/CS2103AUG2017-T10-B2/main/blob/master/collated/main/zengfengw.md[Functional code]] [https://github.com/CS2103AUG2017-T10-B2/main/blob/master/collated/test/zengfengw.md[Test code]] {give links to collated code files}
+*Code contributed*: [https://github.com/CS2103AUG2017-T10-B2/main/blob/master/collated/main/zengfengw.md[Functional code]] [https://github.com/CS2103AUG2017-T10-B2/main/blob/master/collated/test/zengfengw.md[Test code]]
 
 === Enhancement Added: Birthday
 
