--- a/docs/team/rattaninsiripornpitak.adoc
+++ b/docs/team/rattaninsiripornpitak.adoc
@@ -6,7 +6,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 == LISA: Levels Integrated Secretarial Agent
 LISA: Levels Integrated Secretarial Agent is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
 
-*Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] {give links to collated code files}
+*Code contributed*: [https://github.com/CS2103AUG2017-T13-B1/main/tree/master/collated/main/RSJunior37.md[Functional code]] [https://github.com/CS2103AUG2017-T13-B1/main/tree/master/collated/test/RSJunior37.md[Test code]] {give links to collated code files}
 
 === Enhancement Added: Searchbox with partialsearch command
 ==== External behavior
@@ -124,6 +124,11 @@ include::../DeveloperGuide.adoc[tag=restrictTabToTextField]
 
 === Enhancement Proposed:
 
+- Features listed above (excluding restricted Tab)
+- Appointment management & notifications
+- Allow adding of photo onto profile page
 
 === Other contributions
 
+- Handles and assists in implementations related to Ui (excluding css)
+- Housekeeping of (Class, Test, etc.) names which required refactoring
