--- a/docs/team/arnollim.adoc
+++ b/docs/team/arnollim.adoc
@@ -6,16 +6,18 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 == LISA: Levels Integrated Secretarial Agent
 LISA: Levels Integrated Secretarial Agent is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
 
-*Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] {give links to collated code files}
+*Code contributed*: [https://github.com/CS2103AUG2017-T13-B1/main/blob/master/collated/main/arnollim.md[Functional code]] [https://github.com/CS2103AUG2017-T13-B1/main/blob/master/collated/test/arnollim.md[Test code]]
 
-=== Enhancement Added: 'why' command easter egg, 'print' command function, 'sort' function (with help from @Juxarius)
+=== Enhancement Added: Improved Undo/Redo commands such that the Redone/Undone command is returned as feedback, in addition to "Undo/Redo Success!"
 
 ==== External behavior
 
 ---
 #Start of Extract [from: User Guide]#
 
-include::../UserGuide.adoc[tag=add]
+The Undo/Redo commands will return a "Undo/Redo Success!" feedback to the user upon successful
+redo/undo. Now, the undone/redone command will also be returned as a feedback in addition to
+the success message.
 
 #End of Extract#
 
@@ -23,14 +25,105 @@ include::../UserGuide.adoc[tag=add]
 
 ==== Justification
 
-{Justify the need for, and the current design (i.e. external behavior) of, the feature}
+To enhance the user's sense of control over LISA, the Undo/Redo commands will also
+return the undone/redone message to the user as a feedback so that the user knows for sure what
+command is being undone/redone. This will be especially useful if he undoes or redoes the
+command accidentally, or after returning to LISA after a break.
 
 ==== Implementation
 
 ---
 #Start of Extract [from: Developer Guide]#
 
-include::../DeveloperGuide.adoc[tag=add]
+#End of Extract#
+
+---
+
+=== Enhancement Added: Print Command function
+
+==== External behavior
+
+---
+#Start of Extract [from: User Guide]#
+The print command enables the user to save his/her addressbook into a printable .txt file
+
+include::../UserGuide.adoc[tag=print]
+
+#End of Extract#
+
+---
+
+==== Justification
+
+The user may need to export the entire address book in LISA in some sort of text document for
+printing or for reference.
+
+==== Implementation
+
+---
+#Start of Extract [from: Developer Guide]#
+
+include::../DeveloperGuide.adoc[tag=print]
+
+#End of Extract#
+
+---
+
+=== Enhancement Added: 'sort function' (with help from @Juxarius)
+
+==== External behavior
+
+---
+#Start of Extract [from: User Guide]#
+The contact list in LISA is arranged in alphabetical order
+
+#End of Extract#
+
+---
+
+==== Justification
+
+Previously, LISA will arrange the contacts in order of date added. This is not functionally
+helpful. Instead, the contacts are now sorted in alphabetical order, the most common form of
+sorting.
+
+==== Implementation
+
+---
+#Start of Extract [from: Developer Guide]#
+Initially implemented in addressbook-level2, this sort command was implemented successfully in
+LISA with help from Jaryl Tan (@Juxarius).
+
+#End of Extract#
+
+---
+
+=== Enhancement Added: Why Command easter egg
+
+==== External behavior
+
+---
+#Start of Extract [from: User Guide]#
+
+The Why Command throws the user with random information about the indexed person upon
+asking "why".
+
+include::../UserGuide.adoc[tag=why]
+
+#End of Extract#
+
+---
+
+==== Justification
+
+A fun, interesting easter egg feature for the user to play with in LISA.
+
+==== Implementation
+
+---
+#Start of Extract [from: Developer Guide]#
+
+include::../DeveloperGuide.adoc[tag=why]
 
 #End of Extract#
 
@@ -42,5 +135,5 @@ include::../DeveloperGuide.adoc[tag=add]
 === Other contributions
 
 === Additional Information
-Switched to addressbook-level2 without the group; unable to cope with the depth of addressbook-level4.
-Will contribute to administrative matters such as documentation and testing wherever necessary.
+Initially switched to addressbook-level2 without the group; was unable to cope with the depth of addressbook-level4.
+However, switched back to addressbook-level4 after gaining confidence during phase B.
