--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -436,14 +436,14 @@ Format to remove remark: `removeremark INDEX REMARKINDEX`
 ****
 * Add/Remove multiple remarks from multiple indexes as specified.
 * `INDEX` refers to the index number shown in the last person listing.
-* The `INDEX` must be a *positive integer* ( `1, 2, 3, ...`).
-* Range of index can be used.
-** Lower limit of range must be *lower than* or *equal to* the upper limit  (`1-4`, `3-3`).
+* The `INDEX` and `REMARKINDEX` must be a *positive integer* ( `1, 2, 3, ...`).
 ****
 [TIP]
 A person can have any number of remarks (including 0) +
 Remarks can be anything (including a blank) +
 GUI will display a list of person with pending remarks on the right.
+
+image::remarkchecklist.png[width="400"]
 
 Examples:
 
@@ -454,6 +454,7 @@ Examples:
 
 // end::remarkchecklist[]
 
+// tag::link[]
 ==== Link twitter page to contact: `link`
 
 Adds a twitter link to a person existing in the address book based on their index +
@@ -464,9 +465,13 @@ Format: `link PERSONINDEX l/WEBSITEURL` +
 A person can have only one link, any changes will update the existing link to be the new link +
 Only twitter links are accepted
 
+image::twitterlink.png[width="500"]
+
 Examples:
 
 * `link 1 l/https://www.twitter.com/john.doe`
+
+// end::link[]
 
 ==== Clearing all entries : `clear`
 
