--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -393,6 +393,7 @@ We are using `java.util.logging` package for logging. The `LogsCenter` class is 
 * `INFO` : Information showing the noteworthy actions by the App
 * `FINE` : Details that is not usually noteworthy but may be useful in debugging e.g. print the actual list instead of just its size
 
+// tag::genericProperty[]
 === Generic Property
 
 We are using a generic `Property` class to support **arbitrary field** feature.
@@ -453,6 +454,7 @@ easily add/edit these properties of each contact stored in the application, just
 
 image::PropertyManagerSequenceDiagram.png[width="800"]
 _Figure 4.3.3.1 : Sequence Diagram for Adding a Customize Property_
+// end::genericProperty[]
 
 === Auto Reminders
 
