--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -652,6 +652,7 @@ For `macOS` and `Linux` users, use `/` instead.
 Changes the configuration of the application or applies some advance settings to the data. Make sure you know what you
 are doing before using any of the following commands. These commands are intended for advance users.
 
+// tag::genericProperty[]
 ==== Adding a customize property : `(cfg)config --add-property`
 
 Adds a new customize property field available to all persons or events. +
@@ -682,6 +683,7 @@ Example:
 `add`/`addE` and `edit`/`editE` commands is invalid.
 * Regular expression is used to check whether the input value for this property is valid.
 ====
+// end::genericProperty[]
 
 ==== Setting the tag color : `(cfg)config --set-tag-color`
 
