--- a/docs/team/YeoJunkai.adoc
+++ b/docs/team/YeoJunkai.adoc
@@ -1,9 +1,9 @@
 = Yeo Junkai - Project Portfolio
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
-:imagesDir: /../images
-:stylesDir: stylesheets
+:imagesDir: ../images
+:stylesDir: ../stylesheets
 
-= Project: Sales Navigator
+== Project: Sales Navigator
 Sales Navigator is a desktop application built to alleviate the hassles that sales executives experience. The user
 interacts with it using a CLI, and it has a GUI created with Java FX. It is written in Java and was built by modifying
 an existing project Address Book Level 4.
@@ -12,12 +12,12 @@ an existing project Address Book Level 4.
 https://github.com/CS2103AUG2017-T14-B3/main/blob/master/collated/main/reginleiff.md[Functional] ] [
 https://github.com/CS2103AUG2017-T14-B3/main/blob/master/collated/test/reginleiff.md[Tests] ]
 
-== Enhancement Added: Events System
-=== External Behaviour
+=== Enhancement Added: Events System
+==== External Behaviour
 '''
-include::UserGuide.adoc[tag=eventcrud]
+include::../UserGuide.adoc[tag=eventcrud]
 
-=== Justification
+==== Justification
 '''
 This feature is needed for the Sales Navigator as it serves as a digital log of upcoming events and meetings for a
 sales executive. It is required as the foundation for many of the implemented and upcoming high-level features such as
@@ -34,16 +34,16 @@ The list of events is displayed as a list in a tabbed component together with th
 to save space for the main panel that is used to display information for contacts and people. Similar to the person list,
 cards in the list can be clicked on via the GUI to provide an intuitive user experience.
 
-=== Implementation
+==== Implementation
 '''
-include::DeveloperGuide.adoc[tag=eventcrud]
+include::../DeveloperGuide.adoc[tag=eventcrud]
 
-== Enhancement Added: Timetable
-=== External Behaviour
+=== Enhancement Added: Timetable
+==== External Behaviour
 '''
-include::UserGuide.adoc[tag=timetable]
+include::../UserGuide.adoc[tag=timetable]
 
-=== Justification
+==== Justification
 '''
 The timetable's purpose is to give the user a quick view of today's events (timetable events).
 
@@ -56,26 +56,26 @@ increase the length of the displayed list for contacts and events.
 The timetable is displayed above the main window as it is meant to catch the attention of the user especially if changes
 are made to today's schedule.
 
-=== Implementation
+==== Implementation
 '''
-include::DeveloperGuide.adoc[tag=timetable]
+include::../DeveloperGuide.adoc[tag=timetable]
 
-== Enhancement Proposed: Event Tags
-=== External Behaviour
+=== Enhancement Proposed: Event Tags
+==== External Behaviour
 '''
-include::UserGuide.adoc[tag=eventtag]
-//=== Justification
+include::../UserGuide.adoc[tag=eventtag]
+//==== Justification
 //'''
-//=== Implementation
+//==== Implementation
 //'''
 //include::DeveloperGuide.adoc[tag=eventtag]
 
 == Enhancement Proposed: Timetable Settings
 === External Behaviour
 '''
-include::UserGuide.adoc[tag=timetablesettings]
-//=== Justification
+include::../UserGuide.adoc[tag=timetablesettings]
+//==== Justification
 //'''
-//=== Implementation
+//==== Implementation
 //'''
 //include::DeveloperGuide.adoc[tag=timetablesettings]
