--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -248,10 +248,45 @@ The `redo` command fails as there are no `undo` commands executed previously.
 Clears all entries from the address book. +
 Format: `clear`
 
-=== Add multiple contacts at once : `Add range` (Coming in v1.5)
+// tag::addMultiple[]
+=== Add multiple contacts at once : `addMul`
 
-Add multiple contacts to addressBook at once. +
-Format: `Add [numberOfContacts] [Details]`
+Add multiple contacts to TheYellowPage at once, given the list of contacts in a tab-separated file. +
+Format: `addMul TSV_PATH`
+
+****
+* This command adds multiple contacts stored in a file to the YellowPage.
+* TSV_PATH refers to the path to the file containing the contacts to add.
+* Note that the specified file must be in tab-separated format.
+****
+
+Example:
+
+The following is a valid tab-separated file at D:/contact.txt:
+
+|===
+|name  |occupation |phone |email |address |website |tag
+
+|John Doe
+|Google, CEO
+|98765432
+|johnd@example.com
+|John street, block 123, #01-01
+|https://github.com/JohnDoe
+|friend, neighbor
+
+|Betsy Crowe
+|Microsoft, Software Engineer
+|1234567
+|betsycrowe@example.com
+|Newgate Prison
+|https://github.com/BetsyCrowe
+|friend, criminal
+|===
+
+* `addM D:/contacts.txt` +
+Add the list of contacts in contacts.txt into TheYellowPage
+// end::addMultiple[]
 
 === Delete multiple contacts at once: `deleteMul` (Since v1.2)
 
@@ -275,9 +310,24 @@ deletes the contacts with the 2nd, 4th, 7th and 8th indexes in the address book.
 
 ****
 
-=== Add photos : (Coming in v1.5)
+// tag::changePicture[]
+=== Change Profile Picture : `changePicture`
 
-Add photos to contact details in addressBook. +
+Add photos to contact profile in addressBook. +
+Format: `changePicture INDEX PICTURE_PATH`
+
+****
+* This command changes the profile picture of the cotact at the specified `index`.
+* INDEX refers to the index number shown in the most recent listing.
+* PICTURE_PATH refers to the path to the picture to change to.
+* The specified picture must be in either .png or . jpg format.
+****
+
+Example:
+
+* `changePicture 1 D:/myPicture.png +
+Change the profile picture of the first contact shown in the most recent listing to the picture specified at D:/myPicture.png
+// end::changePicture[]
 
 === Delete Tag : (Coming in v1.5)
 
