--- a/docs/team/hoangnguyen.adoc
+++ b/docs/team/hoangnguyen.adoc
@@ -7,16 +7,16 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 TheYellowPage is a desktop address book application developed in the module CS2103T: Software Engineering. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 10 kLoC.
 
-*Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] {give links to collated code files}
+*Code contributed*: [https://github.com/CS2103AUG2017-T10-B4/main/blob/master/collated/main/nguyenvanhoang7398.md] [https://github.com/CS2103AUG2017-T10-B4/main/blob/master/collated/test/nguyenvanhoang7398.md]
 
-=== Enhancement Added: Undo/Redo
+=== Enhancement Added: Add multiple contacts
 
 ==== External behavior
 
 ---
 #Start of Extract [from: User Guide]#
 
-include::../UserGuide.adoc[tag=undoredo]
+include::../UserGuide.adoc[tag=addMultiple]
 
 #End of Extract#
 
@@ -24,28 +24,76 @@ include::../UserGuide.adoc[tag=undoredo]
 
 ==== Justification
 
-{Justify the need for, and the current design (i.e. external behavior) of, the feature}
+`AddMultipleContactsCommand` saves the user from tediously entering each command one by one. The supported file format, tab-separated (tsv), can be easily exported from any Excel table.
 
 ==== Implementation
 
 ---
 #Start of Extract [from: Developer Guide]#
 
-include::../DeveloperGuide.adoc[tag=undoredo]
+include::../DeveloperGuide.adoc[tag=addMultiple]
 
 #End of Extract#
 
 ---
 
-=== Enhancement Proposed: Add command `remark`
+=== Enhancement Added: Change Profile Picture
 
-{Explain similar to the Undo/Redo feature above.}
+==== External behavior
+
+---
+#Start of Extract [from: User Guide]#
+
+include::../UserGuide.adoc[tag=changePicture]
+
+#End of Extract#
+
+---
+
+==== Justification
+
+`ChangeProfilePictureCommand` adds photo to a contact profile and helps remind the user of his contacts
+
+==== Implementation
+
+---
+#Start of Extract [from: Developer Guide]#
+
+include::../DeveloperGuide.adoc[tag=changePicture]
+
+#End of Extract#
+
+---
+
+=== Enhancement Proposed: Add command `searchPicture`
+
+==== External behavior
+
+---
+
+=== Search By Profile Picture : `searchPicture`
+
+Search contacts in TheYellowPage by specifying the path to the picture of any contact. +
+Format: `searchPicture PICTURE_PATH`
+
+****
+* This command return a list of contacts whose profile picture is similar to the one specified by the user.
+* PICTURE_PATH refers to the path to the picture of the desired contact.
+* The specified picture must be in either .png or . jpg format.
+****
+
+Example:
+
+* `searchPicture D:/myPicture.png +
+Return a list of contacts whose profile picture is most similar with the picture at D:/myPicture.png
+
+---
+
+==== Justification
+
+`SearchByProfilePictureCommand` allows the user to find his contacts given their profile pictures.
 
 === Other contributions
 
-* Updated the GUI color scheme (Pull requests https://github.com[#33], https://github.com[#34])
-* Wrote additional tests to increase coverage from 88% to 92% (Pull requests https://github.com[#36], https://github.com[#38])
-
-== Project: PowerPointLabs
-
-{Optionally (not graded), you may include other projects in your portfolio.}
+* Add additional Profile Panel to Main Window to view contact details (Pull requests https://github.com/CS2103AUG2017-T10-B4/main/pull/85[#85])
+* Wrote additional tests to increase coverage (Pull requests https://github.com/CS2103AUG2017-T10-B4/main/pull/112[#112], https://github.com/CS2103AUG2017-T10-B4/main/pull/62[#62])
